# skeletree

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/skeletree/: Cargo.toml
crates/skeletree-bench/: Cargo.toml
crates/skeletree-bench/src/: lib.rs
crates/skeletree-core/: Cargo.toml
crates/skeletree-core/src/: entities.rs  error.rs  ids.rs  kinds.rs  lang.rs  lib.rs
crates/skeletree-engine/: Cargo.toml
crates/skeletree-engine/src/: lib.rs  rank.rs
crates/skeletree-lang/: Cargo.toml
crates/skeletree-lang/queries/: javascript-edges.scm  javascript.scm  python-edges.scm  python.scm  rust-edges.scm  rust.scm  typescript-edges.scm  typescript.scm
crates/skeletree-lang/src/: javascript.rs  lib.rs  python.rs  rust.rs  typescript.rs
crates/skeletree-mcp/: Cargo.toml
crates/skeletree-mcp/src/: lib.rs  server.rs  tools.rs
crates/skeletree-store/: Cargo.toml
crates/skeletree-store/src/: lib.rs  schema.rs
crates/skeletree/src/: main.rs
